--- a/zappa_settings.json
+++ b/zappa_settings.json
@@ -6,5 +6,13 @@
         "project_name": "blog",
         "runtime": "python3.6",
         "s3_bucket": "almond.blog"
+    },
+    "production": {
+        "aws_region": "ap-northeast-2",
+        "django_settings": "Blog.settings",
+        "profile_name": "default",
+        "project_name": "blog",
+        "runtime": "python3.6",
+        "s3_bucket": "blog.a1m0nd.kr.api"
     }
 }
