--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 argcomplete==1.9.3
 base58==1.0.0
+boto==2.48.0
 boto3==1.7.42
 botocore==1.10.42
 certifi==2018.4.16
@@ -7,6 +8,8 @@ cfn-flip==1.0.3
 chardet==3.0.4
 click==6.7
 Django==2.0.6
+django-cors-headers==2.2.0
+django-storages==1.6.6
 djangorestframework==3.8.2
 docutils==0.14
 durationpy==0.5
