--- a/zappa_settings.json
+++ b/zappa_settings.json
@@ -2,17 +2,17 @@
     "dev": {
         "aws_region": "ap-northeast-2",
         "django_settings": "Blog.settings",
-        "profile_name": "default",
+        "profile_name": "almond",
         "project_name": "blog",
         "runtime": "python3.6",
-        "s3_bucket": "almond.blog"
+        "s3_bucket": "dev-blog-a1m0nd-kr-api"
     },
     "production": {
         "aws_region": "ap-northeast-2",
         "django_settings": "Blog.production_settings",
-        "profile_name": "default",
+        "profile_name": "almond",
         "project_name": "blog",
         "runtime": "python3.6",
-        "s3_bucket": "blog.a1m0nd.kr.api"
+        "s3_bucket": "prod-blog-a1m0nd-kr-api"
     }
 }
